--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,7 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Assets/BlockFrostApi/Examples/privateTest.cs
+Assets/BlockFrostApi/Examples/privateTest.cs.meta
+Assets/BlockFrostApi/Examples/privateTestScene.unity
+Assets/BlockFrostApi/Examples/privateTestScene.unity.meta
